--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/Gems/GemDetails/GemDetails.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/Gems/GemDetails/GemDetails.scss
@@ -6,74 +6,176 @@
     background-size: cover;
     background-repeat: no-repeat;
     padding-bottom: 4%;
-    & > h2 { @include h2; }
+    & > h2 { @include h2; margin-bottom: 6%; }
 
     & > .inner-details {
         @include inner-details-template;
-        justify-content: space-between;
+        display: block;
 
-        & > .image-name {
-            width: 35%;
-            padding-left: 5%;
-            & > h4 { @include h2; padding-bottom: 3rem; }
-            & > img { 
-                cursor: pointer;
-                width: 100%; 
-                border-radius: 0.3rem;
-                border: 2px solid rgba(21,140,186,1);
-                -webkit-box-shadow: 0px 0px 23px 0px rgba(0,0,0,0.75);
-                -moz-box-shadow: 0px 0px 23px 0px rgba(0,0,0,0.75);
-                box-shadow: 0px 0px 23px 0px rgba(0,0,0,0.75);
-                padding: 5px;
-                opacity: 0;
-                animation: visible 2s 0.3s linear forwards;
+        & > button { @include trash-button; }
+        & > .gem-box {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
 
-                &:active { transform: scale(1.3); }
-            }
-        }
-
-        & > .info {
-            width: 42%;
-            padding: 1% 0;
-            text-align: center;
-
-            & > button { @include trash-button; }
-            & > h4 { @include h2; padding-bottom: 3rem; }
+            & > .image-name {
+                width: 35%;
+                padding-left: 5%;
+                & > h4 { @include h2; padding-bottom: 3rem; }
+                & > img { 
+                    cursor: pointer;
+                    width: 100%; 
+                    border-radius: 0.3rem;
+                    border: 2px solid rgba(21,140,186,1);
+                    -webkit-box-shadow: 0px 0px 23px 0px rgba(0,0,0,0.75);
+                    -moz-box-shadow: 0px 0px 23px 0px rgba(0,0,0,0.75);
+                    box-shadow: 0px 0px 23px 0px rgba(0,0,0,0.75);
+                    padding: 5px;
+                    opacity: 0;
+                    animation: visible 2s 0.3s linear forwards;
     
-            & > .inner-text { 
-                text-align: left; 
-                display: block;
-                margin: 0 auto;
-                width: 9rem;
-                & > p { font-weight: bold; font-size: 18px; color: #fff; text-shadow: 1px 1px rgb(0,0,0); }
-            }
-
-            & > span {
-                display: flex;
-                height: 4rem;
-                padding-top: 5%;
-                justify-content: center;
-
-                & .right-hand { 
-                    color: rgb(21,140,186);
-                    font-size: 28px;
-                    margin: 8px 6% 0 0;
-                }
-
-                & .take-it {
-                    @include details-button;
-                    padding: 0.3rem 1.4rem;
-                    border: 1px solid #fff;
-                    &:hover { border-color: rgb(21,140,186); }
+                    &:active { transform: scale(1.3); }
                 }
             }
-
-            & .info-take { 
-                width: 100%; 
-                padding-top: 1rem; 
-                color: #fff; 
-                text-shadow: 1px 1px rgb(0,0,0); 
+    
+            & > .info {
+                width: 42%;
+                padding: 1% 0;
+                text-align: center;
+    
+                & > h4 { @include h2; padding-bottom: 3rem; }
+        
+                & > .inner-text { 
+                    text-align: left; 
+                    display: block;
+                    margin: 0 auto;
+                    width: 10rem;
+                    & > p { 
+                        font-weight: bold; 
+                        font-size: 18px; 
+                        color: #fff; 
+                        text-shadow: 1px 1px rgb(0,0,0); 
+                    }
+                }
+    
+                & > span {
+                    display: flex;
+                    height: 4rem;
+                    padding-top: 5%;
+                    justify-content: center;
+    
+                    & .right-hand { 
+                        color: rgb(21,140,186);
+                        font-size: 28px;
+                        margin: 8px 6% 0 0;
+                    }
+    
+                    & .take-it {
+                        @include details-button;
+                        padding: 0.3rem 1.4rem;
+                        border: 1px solid #fff;
+                        &:hover { border-color: rgb(21,140,186); }
+                    }
+                }
+    
+                & .info-take { 
+                    width: 100%; 
+                    padding-top: 1rem; 
+                    color: #fff; 
+                    text-shadow: 1px 1px rgb(0,0,0); 
+                }
             }
         }
+    }
+}
+
+@media screen and (max-width: 1140px) {
+    .details-gem > .inner-details { 
+        width: 92%; 
+        & > .gem-box > .image-name { width: 21rem; }
+    }
+}
+
+@media screen and (max-width: 850px) {
+    .details-gem > .inner-details { 
+        height: auto;
+        & > button { margin-top: 5%; }
+        & > .gem-box {
+            flex-direction: column;
+            height: auto;
+            & > .image-name {
+                width: 80%;
+                margin: 2% auto;
+                padding-left: 0;
+                & > img { width: 60%;}
+            }
+    
+            & > .info {
+                width: 100%;
+                margin: 2% auto;
+                & > span { padding: 0; height: auto; margin-top: 3rem; }
+                & > span > .take-it { padding: 0.5rem 1.2rem; }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .details-gem > .inner-details { 
+        width: 100%;
+        & > .gem-box > .image-name {
+            width: 100%;
+            margin: 5% auto;
+            padding-left: 0;
+            & > img { width: 80%;}
+        }
+
+        & > .gem-box > .info {
+            width: 100%;
+            margin: 5% auto;
+            & > span { padding: 0; height: auto; margin-top: 3rem; }
+            & > span > .take-it { padding: 0.5rem 1.2rem; margin-right: 0; }
+        }
+    }
+}
+
+@media screen and (max-width: 250px) {
+    .details-gem {
+        padding-top: 4%;
+        & > h2 { font-size: 22px; }
+   
+        & > .inner-details { 
+            overflow: hidden;
+            width: 100%;
+            & > button { display: none; }
+
+            & > .gem-box > .image-name {
+                width: 100%;
+                margin: 5% auto;
+                padding-left: 0;
+                & > h4 { font-size: 18px; }
+                & > img { width: 80%;}
+            }
+
+            & > .gem-box > .info {
+                overflow: hidden;
+                width: 100%;
+                margin: 5% auto;
+                & > h4 { font-size: 18px; }
+                & > .inner-text { width: 100%; }
+                & > .inner-text > p { font-size: 14px; padding-left: 10%; }
+                & > span { padding: 0; height: auto; margin-top: 3rem; }
+                & > span > .fa-hand-point-right { display: none; }
+                & > span > .take-it { padding: 0.5rem 1.2rem; }
+                & > .info-take { font-size: 12px; }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 100px) {
+    .details-gem {
+        overflow: hidden;
+        & > h2 { font-size: 18px; }
     }
 }
