--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/shared-components/Footer/Footer.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/shared-components/Footer/Footer.scss
@@ -241,25 +241,24 @@
     }
 }
 
-@media screen and (max-width: 230px) {
-    .footer {
-        & > .services {
-            & .links > div > ul > li > a { font-size: 12px; }
-        }
-    }
-}
-
 @media screen and (max-width: 200px) {
     .footer {
         & > .services {
             & > .contacts { 
+                & > h5 { font-size: 16px; text-align: center; }
                 & > div {
                     padding: 1% 0;
                     padding-left: 1rem;
-                    & > span { font-size: 10px; margin-bottom: 0.3rem;}
-
+                    & > span { 
+                        font-size: 10px; 
+                        margin-left: 0;
+                        margin: 0 auto;
+                        & > svg { opacity: 0; }
+                    }
                 } 
             }
+
+            & > .links > h5 { font-size: 16px; }
 
             & .links > div > ul > li > a { font-size: 10px; }
         }
@@ -293,6 +292,26 @@
 
                 } 
             }
+
+            & > .connect {
+                & > div { 
+                    font-size: 14px; 
+                    & > span { font-size: 14px; } 
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 100px) {
+    .footer {
+        & > .services {
+            & > .contacts {  opacity: 0; }
+        }
+
+        & > .footer-bottom {
+            overflow: hidden;
+            & > svg { width: 80%; }
         }
     }
 }
